@startuml classes

class Bus {
    registrationNumber : String
    model : String
    year : int
    currentLocation : int[]
    currentRoute : Route
    goesTo : Building

    arriveAt(building : Building)
}

class Building {
    id
    name
    location
}

class Station {
    visitedBy : Set<Integer>
}

class Garage {
    acceptedModels : List<String>
}

class Route {
    routeNumber : int
    region : Region
    stations : List<Station>
    arrivalTimes : List<List<LocalTime>>
}

class Region {
    id : int
    name : String
    manager : Manager
    employees : Set<Employee>
    routes : Set<Routes>
}

class Person {
    firstName : String
    lastName : String
    birthday : String
    email : String
    phone : String
}

class Passenger {
    ticketStartDate : LocalDate
    ticketEndDate : LocalDate

    buyTicket(startData : Date, length : Date)
}

class Employee {
    PESEL : String
    region : Region
}

class Manager {
    sendBusToGarage(bus : Bus, garage : Garage)
    sendBusOnRoute(bus : Bus, route : Route)
    hireNewEmployee(employee : Person, PESEL : String)
    fireEmployee(employee : Employee)
    changeRouteNumber(routes : List<Route>, route : Route, routeNumber : int)
    changeRoute(route : Route, station : List<Station>, arrivalTimes : List<List<LocalTime>>)
}

Passenger --|> Person
Employee --|> Person
Manager --|> Employee

Station --|> Building
Garage --|> Building
Bus --o Garage

Route --o Station
Region --> Route
Region --* Employee




@enduml